Fixed spacing issues on mobile by using 100vh on html css

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 html {
   background-color: black;
-  height: 100%;
+  height: 100vh;
 }
 
 body,
